improve index.html

--- a/demo/index.html
+++ b/demo/index.html
@@ -11,6 +11,7 @@
 		<p>
 			It's all console baby
 		</p>
+		<img src="cat.jpg" alt="consul has errurz">
 		<script src="/moduleA/src/js/loader.js"></script>
 	</body>
 </html>
