--- a/demo/index.html
+++ b/demo/index.html
@@ -8,10 +8,13 @@
 		<script src="/bower_components/cajon/cajon.js"></script>
 	</head>
 	<body>
-		<p>
-			It's all console baby
-		</p>
-		<img src="cat.jpg" alt="consul has errurz">
-		<script src="/moduleA/src/js/loader.js"></script>
+		<h2>Works, but can't be used on Prod/QA</h2>
+		<a href="a-norm-b-norm.html">A is unoptimized, B is unoptimized</a>
+
+		<h2>Does not work, this is Prod/QA</h2>
+		<a href="a-opt-b-opt.html">A is optimized, B is optimized</a>
+
+		<h2>Does not work</h2>
+		<a href="a-norm-b-opt.html">A is unoptimized, B is optimized</a>
 	</body>
 </html>
