--- a/demo/a-norm-b-norm.html
+++ b/demo/a-norm-b-norm.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
+		<link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap-theme.css">
 		
 		<script src="/bower_components/cajon/cajon.js"></script>
 	</head>
