--- a/demo/a-opt-b-opt.html
+++ b/demo/a-opt-b-opt.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
+		<link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap-theme.css">
 		
 		<script src="/bower_components/cajon/cajon.js"></script>
 	</head>
@@ -12,7 +14,6 @@
 		<p>
 			It's all console baby
 		</p>
-		<img src="cat.jpg" alt="consul has errurz">
 		<script>
 			require.config({
 				baseUrl: '/'
