Works because collection-manager exports global LFCM

--- a/demo/index.html
+++ b/demo/index.html
@@ -15,7 +15,9 @@
 		
 		<script>
       require.config({
-			  studio: 'studio/dist/main.js'
+      		  paths: {
+				  studio: '../studio/dist/main.js'
+			  }
 			});
 			
 			require(['studio'], function(Studio) {
